@@ -1,46 +1,0 @@
-/*
- * (c) Copyright Object Computing, Incorporated. 2005,2010. All rights reserved.
- */
-package org.opendds.modeling.diagram.dcpslib.edit.parts;
-
-import org.eclipse.gmf.runtime.diagram.ui.editparts.DiagramEditPart;
-import org.eclipse.gmf.runtime.diagram.ui.editpolicies.EditPolicyRoles;
-import org.eclipse.gmf.runtime.notation.View;
-import org.opendds.modeling.diagram.dcpslib.edit.policies.DcpsLibCanonicalEditPolicy;
-import org.opendds.modeling.diagram.dcpslib.edit.policies.DcpsLibItemSemanticEditPolicy;
-
-/**
- * @generated
- */
-public class DcpsLibEditPart extends DiagramEditPart {
-
-	/**
-	 * @generated
-	 */
-	public final static String MODEL_ID = "OpenDDS DcpsLib"; //$NON-NLS-1$
-
-	/**
-	 * @generated
-	 */
-	public static final int VISUAL_ID = 1000;
-
-	/**
-	 * @generated
-	 */
-	public DcpsLibEditPart(View view) {
-		super(view);
-	}
-
-	/**
-	 * @generated
-	 */
-	protected void createDefaultEditPolicies() {
-		super.createDefaultEditPolicies();
-		installEditPolicy(EditPolicyRoles.SEMANTIC_ROLE,
-				new DcpsLibItemSemanticEditPolicy());
-		installEditPolicy(EditPolicyRoles.CANONICAL_ROLE,
-				new DcpsLibCanonicalEditPolicy());
-		// removeEditPolicy(org.eclipse.gmf.runtime.diagram.ui.editpolicies.EditPolicyRoles.POPUPBAR_ROLE);
-	}
-
-}
